hphp/hack/test/typecheck/reactive/reactive_calls3.php.exp
File "reactive_calls3.php", line 10, characters 3-6:
Cannot append to a Hack Collection types in a reactive context (Typing[4201])
